added svg and download

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 .column {
   float: left;
-  width: 50%;
+  width: 25%;
 }
 
 /* Clear floats after the columns */
@@ -11,4 +11,5 @@
 }
 
 .mst {
+    width: 6ex;
 }
